Fully working project with a slight difference from the instructions given : books are ordered by author name, then by title. Going to branch it for a compliant version

--- a/views/book.html.twig
+++ b/views/book.html.twig
@@ -7,7 +7,7 @@
 		<h2>{{ book.title }}</h2>
 		<p>
 			<ul>
-				<li>Auteur : </li>
+				<li>Auteur : {{ author.fname }} {{ author.lname }}</li>
 				<li>ISBN : {{ book.isbn }}</li>
 			</ul>
 		</p>
